<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Eagles</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="refresh">Refresh</string>
    <string name="menu_image">&#x2261;</string>

    <string name="pass_header">PASS</string>
    <string name="rush_header">RUSH</string>
    <string name="rec_header">REC</string>

    <string name="bye_week">BYE</string>
    <string name="at_symbol">\@</string>

    <string name="twitter_handle">\@Eagles</string>
    <string name="twitter_image">Profile picture for the Eagles Twitter feed.</string>

    <string name="clear_text">Clear Data</string>
    <string name="internet_error_text">There seems to be a problem with your internet connection.\nPlease try again later.</string>
    <string name="error_text">We seem to have encountered a problem.\nPlease try again later.</string>

    <string name="news_headline">LATEST NEWS</string>
    <string name="schedule_headline">REGULAR SEASON</string>
    <string name="twitter_headline">LATEST TWEETS</string>

    <!-- Text for when fetching content -->
    <string name="fetch_schedules">Please be patient while we fetch the latest fixtures and results&#8230;</string>
    <string name="fetch_news">Please be patient while we fetch the latest news stories&#8230;</string>
    <string name="fetch_twitter">Please be patient while we fetch the latest tweets&#8230;</string>

    <integer-array name="google_colors">
        <item>@color/red</item>
        <item>@color/blue</item>
        <item>@color/yellow</item>
        <item>@color/green</item>
    </integer-array>

    <string name="away_logo_description">Away team logo</string>
    <string name="home_logo_description">Home team logo</string>
    <string name="away_timeout_description">Timeouts for away team</string>
    <string name="home_timeout_description">Timeouts for home team</string>
    <string name="possession_description">If the team is in possession</string>
    <string name="slide_left_description">Slide left for more</string>
    <string name="slide_right_description">Slide right for more</string>

    <string name="passing_header">Passing</string>
    <string name="rushing_header">Rushing</string>
    <string name="receiving_header">Receiving</string>
    <string name="defending_header">Defensive</string>
    <string name="kick_returning_header">Kick Returns</string>
    <string name="punt_returning_header">Punt Returns</string>
    <string name="kicking_header">Kicking</string>
    <string name="punting_header">Punting</string>

    <string name="statistics_page_header">Statistics</string>

</resources>
