<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <LinearLayout
        android:id="@+id/current_match_parent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|bottom"
            android:orientation="horizontal"
            android:paddingBottom="12dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:layout_gravity="bottom"
                android:orientation="horizontal"
                android:paddingBottom="2dp"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/current_match_away_team_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingEnd="0dp"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingEnd="0dp"
                        android:paddingTop="2.5dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/current_match_away_timeout_3"
                            android:layout_width="12dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/headline_game_dot_full"
                            android:contentDescription="@string/away_timeout_description" />

                        <ImageView
                            android:id="@+id/current_match_away_timeout_2"
                            android:layout_width="12dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/headline_game_dot_full"
                            android:contentDescription="@string/away_timeout_description" />

                        <ImageView
                            android:id="@+id/current_match_away_timeout_1"
                            android:layout_width="12dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/headline_game_dot_empty"
                            android:contentDescription="@string/away_timeout_description" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/current_match_away_team_image"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/green_bay"
                        android:contentDescription="@string/away_logo_description"/>

                    <ImageView
                        android:id="@+id/current_match_away_possession"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="8dp"
                        android:src="@drawable/headline_game_football"
                        android:contentDescription="@string/possession_description"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/current_match_time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="END 1ST"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/current_match_matchup_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="GB @ SEA"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/current_match_drive_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3RD &amp; GOAL, SEA 49"
                    android:textColor="@color/grey"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:layout_gravity="bottom"
                android:orientation="horizontal"
                android:paddingBottom="2dp"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/current_match_home_team_image"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/seattle"
                        android:contentDescription="@string/home_logo_description" />

                    <ImageView
                        android:id="@+id/current_match_home_possession"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="8dp"
                        android:src="@drawable/headline_game_football"
                        android:contentDescription="@string/possession_description" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/current_match_home_team_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:paddingStart="0dp"
                        android:paddingEnd="10dp"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingEnd="0dp"
                        android:paddingTop="2.5dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/current_match_home_timeout_1"
                            android:layout_width="12dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/headline_game_dot_full"
                            android:contentDescription="@string/away_timeout_description" />

                        <ImageView
                            android:id="@+id/current_match_home_timeout_2"
                            android:layout_width="12dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/headline_game_dot_full"
                            android:contentDescription="@string/away_timeout_description" />

                        <ImageView
                            android:id="@+id/current_match_home_timeout_3"
                            android:layout_width="12dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/headline_game_dot_full"
                            android:contentDescription="@string/away_timeout_description" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:background="@color/grey"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/current_match_heading_pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/pass_header"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/current_match_heading_rush"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/rush_header"
                android:textColor="@color/translucent_black_dark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/current_match_heading_rec"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/rec_header"
                android:textColor="@color/translucent_black_dark"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingEnd="0dp">

                <TextView
                    android:id="@+id/current_match_away_player_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cam Newton"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/current_match_away_player_stats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="147/256, 1794 yds, 8 TD"
                    android:textColor="@color/white" />

            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="0dp"
                android:paddingEnd="8dp">

                <TextView
                    android:id="@+id/current_match_home_player_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nick Foles"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/current_match_home_player_stats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="187/312, 2163 yds, 13 TD"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>